--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-PORT=
-DBHOST=
-DBPORT=
-DBUSER=
-DBPASS=
-DBNAME=
-CLIENT=
-SERVER=
+export DB_PORT=
+export DB_PASS=
+export DB_HOST=
+export DB_USER=
+export DB_DBNAME=
+export PORT=
+export SECRET=
+export CLIENT_MIDTRANS=
+export SERVER_MIDTRANS=
